# sphinx-breathe

./: .buildinfo  Doxyfile.in  class_foo-members.html  class_foo.html  classes.html  classmorai_1_1comm_1_1_i_client-members.html  classmorai_1_1comm_1_1_i_client.html  classmorai_1_1comm_1_1_i_server.html  classmorai_1_1comm_1_1_i_socket-members.html  classmorai_1_1comm_1_1_i_socket_thread_handler-members.html  classmorai_1_1comm_1_1_i_socket_thread_handler.html  conf.py  dir_4361599c73f1beb3aaa7c8a2db1064e3.html  dir_52fb8784e7840ebf9ac8a823f163f50a.html  dir_fdcc9af8fe0d609bcb54d9f305edfee3.html  genindex.html  hierarchy.html  index.html  namespacemy__package.html  namespaces.html  objects.inv  py-modindex.html  requirements.html  search.html  searchindex.js  structmorai_1_1comm_1_1_data_queue_item-members.html  structmorai_1_1comm_1_1_data_queue_item.html
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: cpp_doxygen_sphinx.doctree  index.doctree
.github/workflows/: sphinx.yml
_build/html/: .buildinfo  annotated.html  classmorai_1_1comm_1_1_i_socket.html  classmorai_1_1comm_1_1_socket_base.html  index.html  objects.inv
_build/html/.doctrees/: environment.pickle  index.doctree
_build/html/_sources/api/: cpp_doxygen_sphinx.rst.txt  index.rst.txt
_build/html/search/: classes_2.js
_build/xml/: class_foo.xml  classmorai_1_1comm_1_1_i_server.xml  classmorai_1_1comm_1_1_i_socket.xml  classmorai_1_1comm_1_1_i_socket_thread_handler.xml  classmorai_1_1comm_1_1_socket_base.xml  cpp__doxygen__sphinx_8hpp.xml  dll__export_8h.xml  index.xml  namespacecirrus_1_1msg.xml  namespacemorai.xml  namespacemorai_1_1comm_1_1tcp.xml  namespacemorai_1_1msg.xml  namespacemy__package.xml  socket_8h.xml  structmorai_1_1comm_1_1_data_queue_item.xml  udp__sender__example_8cpp.xml
_sources/: index.rst.txt  requirements.txt
api/: cpp_doxygen_sphinx.html  index.html
docs/: Makefile  conf.py
docs/_build/html/: classmorai_1_1comm_1_1_i_server-members.html  classmorai_1_1comm_1_1_socket_base-members.html  dir_f2bc9cfbf509ce961e1d31be94962b4d.html  genindex.html  search.html  searchindex.js
docs/_build/html/api/: cpp_doxygen_sphinx.html  index.html
docs/_build/html/search/: all_3.js
docs/_build/xml/: Doxyfile.xml  ____init_____8py.xml  classmorai_1_1comm_1_1_i_client.xml  classmy__package_1_1morai__module_1_1_math.xml  dir_4361599c73f1beb3aaa7c8a2db1064e3.xml  dir_52fb8784e7840ebf9ac8a823f163f50a.xml  dir_f2bc9cfbf509ce961e1d31be94962b4d.xml  dir_fdcc9af8fe0d609bcb54d9f305edfee3.xml  grpc__server__example_8cpp.xml  morai__module_8py.xml  namespacemorai_1_1comm.xml  namespacemorai_1_1comm_1_1udp.xml  namespacemy__package_1_1morai__module.xml  namespacestd.xml  tcp__client__example_8cpp.xml  tcp__server__example_8cpp.xml  udp__receiver__example_8cpp.xml
my_package/: __init__.py  socket.h
my_package/examples/: CMakeLists.txt
my_package/examples/morai_grpc_server/: CMakeLists.txt  grpc_server_example.cpp
my_package/examples/socket/: CMakeLists.txt  tcp_client_example.cpp  tcp_server_example.cpp  udp_receiver_example.cpp  udp_sender_example.cpp
search/: classes_0.js  classes_3.js  searchdata.js
